--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,19 +16,22 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: read
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: graalvm/setup-graalvm@v1
         with:
           java-version: '21'
           distribution: 'graalvm'
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build Native Executable
         run: gradlew nativeCompile
+
       - name: Upload EncryptMyPack.exe
         uses: actions/upload-artifact@v2
         if: success()
