--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,7 +45,9 @@ jobs:
 
       - name: Build MacOS Native Executable
         if: matrix.os == 'macos-latest'
-        run: ./gradlew nativeCompile
+        run: |
+          chmod +x gradlew
+          ./gradlew nativeCompile
 
       - name: Upload Files
         uses: actions/upload-artifact@v2
