--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - .github/workflows/build.yml
+      - .github/workflows/gradle.yml
       - src/**
   pull_request:
     paths:
-      - .github/workflows/build.yml
+      - .github/workflows/gradle.yml
       - src/**
 
 jobs:
