ci: only upload shaded jar

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,4 +36,4 @@ jobs:
         uses: actions/upload-artifact@v4
         if: success() && contains(github.ref_name, 'main')
         with:
-          path: build/libs/*.jar
+          path: build/libs/EncryptMyPack-*-shaded.jar
